--- a/Application/app/src/main/res/layout/content_page_accueil.xml
+++ b/Application/app/src/main/res/layout/content_page_accueil.xml
@@ -21,7 +21,8 @@
         android:layout_width="250dp"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:textAppearance="@style/TextAppearance.AppCompat.Display1" />
+        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
+        android:elevation="0dp" />
 
     <ImageView
         android:layout_width="100dp"
@@ -39,9 +40,12 @@
         android:layout_width="300dp"
         android:textAppearance="@style/TextAppearance.AppCompat"
         android:textSize="30sp"
-        android:layout_marginBottom="30dp"
+        android:layout_marginBottom="100dp"
+        android:textAlignment="center"
+        android:layout_marginRight="123dp"
+        android:layout_marginEnd="123dp"
         android:layout_above="@+id/imageView2"
-        android:layout_centerHorizontal="true"
-        android:textAlignment="center" />
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
 
 </RelativeLayout>
