--- a/GuitarLEDgend/app/src/main/res/layout/activity_start.xml
+++ b/GuitarLEDgend/app/src/main/res/layout/activity_start.xml
@@ -22,5 +22,16 @@
         android:gravity="center"
         android:maxWidth = "250sp"/>
 
+    <Button
+        style="@style/button"
+        android:text="@string/start"
+        android:textSize="30sp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/start_button"
+        android:layout_marginTop="92dp"
+        android:layout_below="@+id/app_name"
+        android:layout_centerHorizontal="true" />
+
 
 </RelativeLayout>
