--- a/GuitarLEDgend/app/src/main/res/values/styles.xml
+++ b/GuitarLEDgend/app/src/main/res/values/styles.xml
@@ -12,8 +12,9 @@
     <style name="button">
         <item name="android:background">@drawable/buttons</item>
         <item name="android:textColor">#ffffff</item>
-        <item name="android:minHeight">60dip</item>
-        <item name="android:minWidth">150dip</item>
+        <item name="android:minHeight">50dip</item>
+        <item name="android:minWidth">120dip</item>
+        <item name="android:textAllCaps">false</item>
     </style>
 
 </resources>
