--- a/GuitarLEDgend/app/src/main/res/layout/activity_start.xml
+++ b/GuitarLEDgend/app/src/main/res/layout/activity_start.xml
@@ -31,7 +31,9 @@
         android:id="@+id/start_button"
         android:layout_marginTop="92dp"
         android:layout_below="@+id/app_name"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:minHeight="50dip"
+        android:minWidth="120dip"/>
 
 
 </RelativeLayout>
