--- a/GuitarLEDgend/app/src/main/res/menu/activity_main_drawer.xml
+++ b/GuitarLEDgend/app/src/main/res/menu/activity_main_drawer.xml
@@ -5,11 +5,11 @@
         <item
             android:id="@+id/nav_profils"
             android:icon="@drawable/ic_menu_profils"
-            android:title="Import" />
+            android:title="Profils" />
         <item
             android:id="@+id/nav_settings"
             android:icon="@drawable/ic_menu_settings"
-            android:title="Slideshow" />
+            android:title="Préférences" />
     </group>
 
 </menu>
