--- a/GuitarLEDgend/app/src/main/res/layout/content_main.xml
+++ b/GuitarLEDgend/app/src/main/res/layout/content_main.xml
@@ -13,4 +13,16 @@
     tools:context="com.example.hugo.guitarledgend.MainActivity"
     tools:showIn="@layout/app_bar_main">
 
+    <Button
+        style="@style/button"
+        android:text="@string/stats"
+        android:textSize="30sp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/stats_button"
+        android:layout_marginTop="92dp"
+        android:layout_centerHorizontal="true"
+        android:minHeight="50dip"
+        android:minWidth="120dip"/>
+
 </RelativeLayout>
