--- a/GuitarLEDgend/app/src/main/res/layout/content_main.xml
+++ b/GuitarLEDgend/app/src/main/res/layout/content_main.xml
@@ -25,4 +25,17 @@
         android:minHeight="50dip"
         android:minWidth="120dip"/>
 
+    <Button
+        style="@style/button"
+        android:text="@string/startPlay"
+        android:textSize="30sp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/startPlay_button"
+        android:layout_marginTop="92dp"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@id/stats_button"
+        android:minHeight="50dip"
+        android:minWidth="120dip"/>
+
 </RelativeLayout>
