--- a/GuitarLEDgend/app/src/main/res/layout/activity_stats.xml
+++ b/GuitarLEDgend/app/src/main/res/layout/activity_stats.xml
@@ -1,6 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-</LinearLayout>
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation= "horizontal"
+        android:layout_centerHorizontal="true"
+        android:id="@+id/linearLayout_stats">
+
+        <EditText
+            android:id="@+id/annee"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:hint="annee" />
+
+        <EditText
+            android:id="@+id/mois"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:hint="mois" />
+
+        <EditText
+            android:id="@+id/jour"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:hint="jour" />
+
+    </LinearLayout>
+
+    <Button
+        style="@style/button"
+        android:text="@string/chercher"
+        android:textSize="30sp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/chercher"
+        android:layout_marginTop="92dp"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@id/linearLayout_stats"
+        android:minHeight="50dip"
+        android:minWidth="120dip"/>
+
+
+</RelativeLayout>
