ChoosePartitionActivity: ajout des EditText

--- a/GuitarLEDgend/app/src/main/res/layout/activity_choose_partition.xml
+++ b/GuitarLEDgend/app/src/main/res/layout/activity_choose_partition.xml
@@ -16,4 +16,27 @@
         android:minHeight="50dip"
         android:minWidth="120dip"/>
 
+    <EditText
+        android:id="@+id/nom_choosePartition"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:hint="@string/nom" />
+
+    <EditText
+        android:id="@+id/auteur_choosePartition"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@+id/nom_choosePartition"
+        android:hint="@string/auteur" />
+
+    <EditText
+        android:id="@+id/genre_choosePartition"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@+id/auteur_choosePartition"
+        android:hint="@string/genre" />
+
 </RelativeLayout>
