--- a/GuitarLEDgend/app/src/main/res/layout/activity_play_partition.xml
+++ b/GuitarLEDgend/app/src/main/res/layout/activity_play_partition.xml
@@ -21,12 +21,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/oui_button"
-        android:layout_marginTop="92dp"
-        android:layout_centerHorizontal="true"
-        android:layout_below="@id/jouer"
-        android:layout_alignParentLeft="true"
         android:minHeight="50dip"
-        android:minWidth="120dip"/>
+        android:minWidth="120dip"
+        android:layout_alignBaseline="@+id/non_button"
+        android:layout_alignBottom="@+id/non_button"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginLeft="39dp"
+        android:layout_marginStart="39dp" />
 
     <Button
         style="@style/button"
@@ -35,12 +37,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/non_button"
-        android:layout_marginTop="92dp"
-        android:layout_centerHorizontal="true"
-        android:layout_below="@id/jouer"
-        android:layout_alignParentRight="true"
         android:minHeight="50dip"
-        android:minWidth="120dip"/>
+        android:minWidth="120dip"
+        android:layout_centerVertical="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginRight="37dp"
+        android:layout_marginEnd="37dp" />
 
 
 </RelativeLayout>
