--- a/GuitarLEDgend/app/src/main/res/layout/activity_profiles.xml
+++ b/GuitarLEDgend/app/src/main/res/layout/activity_profiles.xml
@@ -29,7 +29,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/next_button"
         android:minHeight="100dip"
-        android:maxWidth="250dip"
+        android:width="270dip"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="84dp" />
