Modification de la forme de quelques boutons

--- a/GuitarLEDgend/app/src/main/res/drawable/buttons.xml
+++ b/GuitarLEDgend/app/src/main/res/drawable/buttons.xml
@@ -32,6 +32,9 @@
                     <solid android:color="@color/colorButton"/>
                     <corners android:radius="3sp" />
                 </shape>
+                <padding
+                    android:left="20dp"
+                    android:right="20dp" />
             </item>
         </layer-list>
     </item>
