--- a/GuitarLEDgend/app/src/main/res/layout/activity_settings.xml
+++ b/GuitarLEDgend/app/src/main/res/layout/activity_settings.xml
@@ -8,6 +8,6 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.hugo.guitarledgend.SettingsActivity">
+    tools:context="com.example.hugo.guitarledgend.Activities.SettingsActivity">
 
 </RelativeLayout>
