PartitionsAdapter : création d'un adapter pour afficher les partitions de la base de données
Modification des classes représentant la base de données des partitions pour pouvoir créer une listView

ChoosePartitionActivity : création d'une listView pour visualiser la base de données des partitions

--- a/GuitarLEDgend/app/src/main/res/layout/activity_choose_partition.xml
+++ b/GuitarLEDgend/app/src/main/res/layout/activity_choose_partition.xml
@@ -3,28 +3,10 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <EditText
-        android:id="@+id/nom_choosePartition"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:hint="@string/nom" />
-
-    <EditText
-        android:id="@+id/auteur_choosePartition"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_below="@+id/nom_choosePartition"
-        android:hint="@string/auteur" />
-
-    <EditText
-        android:id="@+id/genre_choosePartition"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_below="@+id/auteur_choosePartition"
-        android:hint="@string/genre" />
+    <ListView
+        android:id="@android:id/list"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 
 
     <Button
