--- a/GuitarLEDgend/app/src/main/res/layout/activity_profiles.xml
+++ b/GuitarLEDgend/app/src/main/res/layout/activity_profiles.xml
@@ -8,7 +8,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.hugo.guitarledgend.Activities.ProfilesActivity">
+    tools:context="com.example.hugo.guitarledgend.activities.ProfilesActivity">
 
     <TextView
         android:id="@+id/comment_profile"
