--- a/GuitarLEDgend/app/src/main/res/layout/app_bar_profiles.xml
+++ b/GuitarLEDgend/app/src/main/res/layout/app_bar_profiles.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="com.example.hugo.guitarledgend.activities.MainActivity">
+    tools:context="com.example.hugo.guitarledgend.activities.ProfilesActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
@@ -13,7 +13,7 @@
         android:theme="@style/AppTheme.AppBarOverlay">
 
         <android.support.v7.widget.Toolbar
-            android:id="@+id/main_toolbar"
+            android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary"
@@ -21,7 +21,6 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_main" />
-
+    <include layout="@layout/content_profiles" />
 
 </android.support.design.widget.CoordinatorLayout>
