--- a/GuitarLEDgend/app/src/main/res/layout/activity_stats.xml
+++ b/GuitarLEDgend/app/src/main/res/layout/activity_stats.xml
@@ -3,45 +3,27 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation= "horizontal"
-        android:layout_centerHorizontal="true"
-        android:id="@+id/linearLayout_stats">
+    <com.jjoe64.graphview.GraphView
+        android:layout_width="match_parent"
+        android:layout_height="200dip"
+        android:id="@+id/graph" />
 
-        <EditText
-            android:id="@+id/annee"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:hint="@string/annee" />
 
-        <EditText
-            android:id="@+id/mois"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:hint="@string/mois" />
-
-        <EditText
-            android:id="@+id/jour"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:hint="@string/jour" />
-
-    </LinearLayout>
 
     <Button
         style="@style/button"
-        android:text="@string/chercher"
+        android:text="@string/dernieres_stats"
         android:textSize="30sp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/chercher"
+        android:id="@+id/dernieres_stats"
         android:layout_marginTop="92dp"
         android:layout_centerHorizontal="true"
-        android:layout_below="@id/linearLayout_stats"
+        android:layout_below="@id/graph"
         android:minHeight="50dip"
         android:minWidth="160dip"/>
+
+
 
 
 </RelativeLayout>
