Modification de l'intent de ChoosePartitionActivity et AddPartitionActivity vers ChooseSpeedActivity, maintenant il transmet le id de la partition qui va se jouer

--- a/GuitarLEDgend/app/src/main/res/layout/activity_choose_speed.xml
+++ b/GuitarLEDgend/app/src/main/res/layout/activity_choose_speed.xml
@@ -3,4 +3,15 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <TextView
+        android:text="@string/jouer"
+        android:textSize="30sp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/jouer2"
+        android:layout_marginTop="92dp"
+        android:layout_centerHorizontal="true"
+        android:minHeight="50dip"
+        android:minWidth="120dip"/>
+
 </LinearLayout>
