--- a/GuitarLEDgend/app/src/main/res/layout/fragment_profile_choose.xml
+++ b/GuitarLEDgend/app/src/main/res/layout/fragment_profile_choose.xml
@@ -1,29 +1,29 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.hugo.guitarledgend.activities.ProfilesActivity$PlaceholderFragment">
+    android:paddingTop="@dimen/activity_vertical_margin">
 
     <TextView
-        android:id="@+id/section_label"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:id="@+id/nom_profile"
+        android:textSize="34sp"
+        android:textAlignment="center"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
 
     <Button
         style="@style/button"
-        android:text="Vers WelcomeActivity"
+        android:text="Choisir"
         android:textSize="30sp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/next_button"
         android:minHeight="100dip"
         android:width="270dip"
+        android:layout_marginBottom="67dp"
         android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="84dp" />
+        android:layout_centerHorizontal="true" />
 
 </RelativeLayout>
