ChooseProfileFragment : ajout de l'option de suppresion d'un profil (modification de CreateProfileFragment, ProfilesActivity, ProfilesAdapter)
UserDAO : ajout des fonction getAllProfilesIds, updateProfileId, afin de d'implémenter la suppression d'un profil en regenérant les ID à partir de 1.

--- a/GuitarLEDgend/app/src/main/res/layout/activity_start.xml
+++ b/GuitarLEDgend/app/src/main/res/layout/activity_start.xml
@@ -31,9 +31,7 @@
         android:id="@+id/start_button"
         android:layout_marginTop="92dp"
         android:layout_below="@+id/app_name"
-        android:layout_centerHorizontal="true"
-        android:minHeight="50dip"
-        android:minWidth="120dip"/>
+        android:layout_centerHorizontal="true" />
 
 
 </RelativeLayout>
