--- a/GuitarLEDgend/app/src/main/res/layout/fragment_profile_choose.xml
+++ b/GuitarLEDgend/app/src/main/res/layout/fragment_profile_choose.xml
@@ -7,11 +7,22 @@
     android:paddingTop="@dimen/activity_vertical_margin">
 
     <TextView
-        android:id="@+id/nom_profile"
-        android:textSize="34sp"
-        android:textAlignment="center"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+    android:id="@+id/nom_profile"
+    android:textSize="34sp"
+    android:textAlignment="center"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"/>
+
+    <Button
+        style="@style/button"
+        android:text="Supprimer"
+        android:textSize="30sp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/delete_button"
+        android:layout_marginBottom="53dp"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true" />
 
     <Button
         style="@style/button"
@@ -20,10 +31,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/next_button"
-        android:minHeight="100dip"
-        android:width="270dip"
-        android:layout_marginBottom="67dp"
-        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="38dp"
+        android:layout_above="@+id/delete_button"
         android:layout_centerHorizontal="true" />
 
 </RelativeLayout>
