--- a/GuitarLEDgend/app/src/main/res/layout/activity_stats_shown.xml
+++ b/GuitarLEDgend/app/src/main/res/layout/activity_stats_shown.xml
@@ -3,4 +3,10 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <android.support.v4.view.ViewPager
+        android:id="@+id/pager_stats"
+        android:layout_width="match_parent"
+        android:layout_height="fill_parent"
+        android:layout_below="@+id/toolbar" />
+
 </LinearLayout>
