--- a/GuitarLEDgend/app/src/main/res/layout/activity_post_playing.xml
+++ b/GuitarLEDgend/app/src/main/res/layout/activity_post_playing.xml
@@ -16,14 +16,17 @@
         android:id="@+id/graph_PostPlayingActivity" />
 
     <TextView
+        android:background="@drawable/ic_star"
         android:textSize="30sp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/graph_PostPlayingActivity"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
         android:id="@+id/score"
-        android:layout_marginTop="92dp"
-        android:layout_centerHorizontal="true"
+        android:layout_marginTop="86dp"
         android:minHeight="50dip"
-        android:minWidth="120dip"/>
+        android:minWidth="120dip"
+        android:gravity="center"
+        android:layout_below="@+id/graph_PostPlayingActivity"
+        android:layout_centerHorizontal="true" />
+
 
 </RelativeLayout>
