--- a/GuitarLEDgend/app/src/main/res/layout/fragment_stats.xml
+++ b/GuitarLEDgend/app/src/main/res/layout/fragment_stats.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -15,9 +15,23 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/ok_button_StatsFragment"
+        android:layout_below="@+id/score_statsFragment"
         android:layout_marginBottom="53dp"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true" />
 
+    <TextView
+        android:background="@drawable/ic_star"
+        android:textSize="30sp"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:id="@+id/score_statsFragment"
+        android:layout_marginTop="5dp"
+        android:minHeight="50dip"
+        android:minWidth="120dip"
+        android:gravity="center"
+        android:layout_below="@+id/graph_stats_fragment"
+        android:layout_centerHorizontal="true" />
 
-</LinearLayout>
+
+</RelativeLayout>
