--- a/GuitarLEDgend/app/src/main/res/layout/app_bar_profiles.xml
+++ b/GuitarLEDgend/app/src/main/res/layout/app_bar_profiles.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="com.example.hugo.guitarledgend.activities.ProfilesActivity">
+    tools:context="com.example.hugo.guitarledgend.activities.profiles.ProfilesActivity">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -22,7 +22,6 @@
             app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
             app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
 
-        <include layout="@layout/content_profiles" />
 
         <android.support.v4.view.ViewPager
             android:id="@+id/pager"
