--- a/GuitarLEDgend/app/src/main/res/layout/fragment_profile_choose.xml
+++ b/GuitarLEDgend/app/src/main/res/layout/fragment_profile_choose.xml
@@ -6,13 +6,6 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin">
 
-    <TextView
-    android:id="@+id/nom_profile"
-    android:textSize="34sp"
-    android:textAlignment="center"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"/>
-
     <Button
         style="@style/button"
         android:text="Supprimer"
@@ -34,5 +27,16 @@
         android:layout_marginBottom="38dp"
         android:layout_above="@+id/delete_button"
         android:layout_centerHorizontal="true" />
+
+    <TextView
+    android:id="@+id/nom_profile"
+    android:textSize="34sp"
+    android:textAlignment="center"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+        android:layout_marginTop="78dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
 </RelativeLayout>
