--- a/GuitarLEDgend/app/src/main/res/layout/fragment_profile_create.xml
+++ b/GuitarLEDgend/app/src/main/res/layout/fragment_profile_create.xml
@@ -18,44 +18,60 @@
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="84dp" />
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:orientation="vertical"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true">
-        <TextView
-            android:id="@+id/nouveau_profil"
-            android:text="@string/nouveau_profil"
-            android:textSize="34sp"
-            android:textAlignment="center"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
 
         <EditText
             android:id="@+id/nom"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/nom"/>
+            android:hint="@string/nom"
+            android:background="@drawable/edit_background"
+            android:textCursorDrawable="@null"
+            android:gravity="center"
+            android:layout_marginTop="72dp"
+            android:layout_below="@+id/nouveau_profil" />
 
         <RadioGroup
             android:id="@+id/sexe"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:checkedButton="@+id/homme">
+            android:checkedButton="@+id/homme"
+            android:layout_marginTop="58dp"
+            android:layout_below="@+id/nom"
+            android:layout_centerHorizontal="true">
             <RadioButton
                 android:id="@+id/homme"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/homme"/>
+                android:text="@string/homme"
+                android:buttonTint="#ffffff"/>
+
             <RadioButton
                 android:id="@+id/femme"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/femme" />
+                android:text="@string/femme"
+                android:buttonTint="#ffffff"/>
         </RadioGroup>
 
-    </LinearLayout>
+        <TextView
+            android:id="@+id/nouveau_profil"
+            android:text="@string/nouveau_profil"
+            android:textSize="34sp"
+            android:textAlignment="center"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_marginTop="25dp" />
+
+    </RelativeLayout>
 
 </RelativeLayout>
