Changement de noms de layout de menu HelpActivity : création -> ajout du menu Aide dans les deux navigations drawers déjà en place

--- a/GuitarLEDgend/app/src/main/res/layout/activity_profiles.xml
+++ b/GuitarLEDgend/app/src/main/res/layout/activity_profiles.xml
@@ -20,6 +20,6 @@
         android:layout_gravity="start"
         android:fitsSystemWindows="true"
         app:headerLayout="@layout/nav_header"
-        app:menu="@menu/activity_profiles_drawer" />
+        app:menu="@menu/aide_pref" />
 
 </android.support.v4.widget.DrawerLayout>
