--- a/GuitarLEDgend/app/src/main/res/layout/activity_main.xml
+++ b/GuitarLEDgend/app/src/main/res/layout/activity_main.xml
@@ -20,6 +20,6 @@
         android:layout_gravity="start"
         android:fitsSystemWindows="true"
         app:headerLayout="@layout/nav_header"
-        app:menu="@menu/activity_main_drawer" />
+        app:menu="@menu/aide_prof_pref" />
 
 </android.support.v4.widget.DrawerLayout>
