--- a/GuitarLEDgend/app/src/main/res/layout/activity_main.xml
+++ b/GuitarLEDgend/app/src/main/res/layout/activity_main.xml
@@ -8,10 +8,80 @@
     android:fitsSystemWindows="true"
     tools:openDrawer="start">
 
-    <include
-        layout="@layout/app_bar_main"
+    <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:fitsSystemWindows="true"
+        tools:context="com.example.hugo.guitarledgend.activities.MainActivity">
+
+        ***********************
+        *** Application bar ***
+        ***********************
+
+        <android.support.design.widget.AppBarLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:theme="@style/AppTheme.AppBarOverlay">
+
+            <android.support.v7.widget.Toolbar
+                android:id="@+id/main_toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize"
+                android:background="?attr/colorPrimary"
+                app:popupTheme="@style/AppTheme.PopupOverlay" />
+
+        </android.support.design.widget.AppBarLayout>
+
+
+        ***************************
+        *** Content of the page ***
+        ***************************
+
+        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:app="http://schemas.android.com/apk/res-auto"
+            xmlns:tools="http://schemas.android.com/tools"
+            android:id="@+id/content_main"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:paddingBottom="@dimen/activity_vertical_margin"
+            android:paddingLeft="@dimen/activity_horizontal_margin"
+            android:paddingRight="@dimen/activity_horizontal_margin"
+            android:paddingTop="@dimen/activity_vertical_margin"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior"
+            tools:context="com.example.hugo.guitarledgend.activities.MainActivity">
+
+            <Button
+                style="@style/button"
+                android:text="@string/stats"
+                android:textSize="30sp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/stats_button"
+                android:layout_marginTop="92dp"
+                android:layout_centerHorizontal="true" />
+
+            <Button
+                style="@style/button"
+                android:text="@string/startPlay"
+                android:textSize="30sp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/startPlay_button"
+                android:layout_marginTop="92dp"
+                android:layout_centerHorizontal="true"
+                android:layout_below="@id/stats_button" />
+
+        </RelativeLayout>
+
+
+    </android.support.design.widget.CoordinatorLayout>
+
+
+    ***********************************
+    *** Include the Navigation Menu ***
+    ***********************************
 
     <android.support.design.widget.NavigationView
         android:id="@+id/nav_view"
