--- a/GuitarLEDgend/app/src/main/res/layout/activity_test_bluetooth.xml
+++ b/GuitarLEDgend/app/src/main/res/layout/activity_test_bluetooth.xml
@@ -131,7 +131,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/versvitesse"
-            android:onClick="onClick_Next (TestBluetoothActivity)" />
+            android:onClick="onClick_Next" />
 
     </LinearLayout>
 
