--- a/GuitarLEDgend/app/src/main/res/drawable/gradient_pressed.xml
+++ b/GuitarLEDgend/app/src/main/res/drawable/gradient_pressed.xml
@@ -3,8 +3,8 @@
     android:shape="rectangle">
     <gradient
         android:angle="90"
-        android:centerColor="@color/colorButton"
+        android:centerColor="@color/colorButtonPressed"
         android:endColor="#edce7d"
-        android:startColor="@color/colorButton"
+        android:startColor="@color/colorButtonPressed"
         android:type="linear" />
 </shape>
