--- a/GuitarLEDgend/app/src/main/res/layout/fragment_stats_detail.xml
+++ b/GuitarLEDgend/app/src/main/res/layout/fragment_stats_detail.xml
@@ -3,6 +3,11 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/graph_title_statsdetailfragment"/>
+
     <com.jjoe64.graphview.GraphView
         android:layout_width="match_parent"
         android:layout_height="200dip"
