Ajout de l'âge dans la création d'un profil, gestion des préférences "Profils"

--- a/GuitarLEDgend/app/src/main/res/xml/pref_profil.xml
+++ b/GuitarLEDgend/app/src/main/res/xml/pref_profil.xml
@@ -11,4 +11,14 @@
         android:singleLine="true"
         android:title="Nom" />
 
+    <ListPreference
+        android:capitalize="words"
+        android:inputType="textCapWords"
+        android:key="age"
+        android:maxLines="1"
+        android:selectAllOnFocus="true"
+        android:singleLine="true"
+        android:title="Age"
+        />
+
 </PreferenceScreen>
