--- a/GuitarLEDgend/app/src/main/res/layout/fragment_profile_create.xml
+++ b/GuitarLEDgend/app/src/main/res/layout/fragment_profile_create.xml
@@ -7,23 +7,25 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin" >
 
-    <Button
-        style="@style/button"
-        android:text="Créer"
-        android:textSize="30sp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/create_button"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="84dp" />
-
     <RelativeLayout
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:orientation="vertical"
+        android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true">
+
+        <TextView
+            android:id="@+id/nouveau_profil"
+            android:text="@string/nouveau_profil"
+            android:textSize="34sp"
+            android:textAlignment="center"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_marginTop="25dp" />
 
         <EditText
             android:id="@+id/nom"
@@ -33,8 +35,10 @@
             android:background="@drawable/edit_background"
             android:textCursorDrawable="@null"
             android:gravity="center"
-            android:layout_marginTop="72dp"
-            android:layout_below="@+id/nouveau_profil" />
+            android:layout_marginTop="51dp"
+            android:layout_below="@+id/nouveau_profil"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true" />
 
         <RadioGroup
             android:id="@+id/sexe"
@@ -42,8 +46,8 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:checkedButton="@+id/homme"
-            android:layout_marginTop="58dp"
-            android:layout_below="@+id/nom"
+            android:layout_marginBottom="43dp"
+            android:layout_above="@+id/create_button"
             android:layout_centerHorizontal="true">
             <RadioButton
                 android:id="@+id/homme"
@@ -58,19 +62,39 @@
                 android:layout_height="wrap_content"
                 android:text="@string/femme"
                 android:buttonTint="#ffffff"/>
+
+            <RadioButton
+                android:id="@+id/autre"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/Autre"
+                android:buttonTint="#ffffff"/>
         </RadioGroup>
 
-        <TextView
-            android:id="@+id/nouveau_profil"
-            android:text="@string/nouveau_profil"
-            android:textSize="34sp"
-            android:textAlignment="center"
-            android:layout_width="match_parent"
+        <Button
+            style="@style/button"
+            android:text="Créer"
+            android:textSize="30sp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_marginTop="25dp" />
+            android:id="@+id/create_button"
+            android:layout_marginBottom="70dp"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true" />
+
+        <EditText
+            android:id="@+id/age"
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:hint="@string/age"
+            android:background="@drawable/edit_background"
+            android:textCursorDrawable="@null"
+            android:gravity="center"
+            android:layout_above="@+id/sexe"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="50dp"
+            android:inputType="number"/>
+
 
     </RelativeLayout>
 
