--- a/GuitarLEDgend/app/src/main/res/layout/layout_partitions_choose.xml
+++ b/GuitarLEDgend/app/src/main/res/layout/layout_partitions_choose.xml
@@ -3,14 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
-        android:text="Name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/name"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+
 
     <TextView
         android:text="Author"
@@ -19,6 +12,7 @@
         android:layout_below="@+id/name"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
         android:id="@+id/author" />
 
     <TextView
@@ -26,9 +20,19 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/genre"
-        android:layout_alignBaseline="@+id/author"
-        android:layout_alignBottom="@+id/author"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_below="@id/author"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentBottom="true"
+        android:maxLines="1"
+        android:ellipsize="end"/>
+
+    <TextView
+        android:text="Name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/name"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:layout_alignParentTop="true" />
 
 </RelativeLayout>
